<resources>
    <string name="app_name">TaskManager</string>
    <string name="enter_data_to_send">Enter data to send</string>
    <string name="open_calculator_app">Open Calculator App</string>
    <string name="open_todo_list_app">Open Todo List App</string>
    <string name="multiply">Multiply</string>
    <string name="divide">Divide</string>
    <string name="enter_first_number">Enter first number</string>
    <string name="enter_second_number">Enter second number</string>
    <string name="add">Add</string>
</resources>